--- a/loginpage.ui
+++ b/loginpage.ui
@@ -29,7 +29,7 @@
     <property name="geometry">
      <rect>
       <x>190</x>
-      <y>260</y>
+      <y>290</y>
       <width>141</width>
       <height>51</height>
      </rect>
@@ -74,7 +74,7 @@
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QLabel" name="id">
+   <widget class="QLabel" name="id_label">
     <property name="geometry">
      <rect>
       <x>100</x>
@@ -90,7 +90,7 @@
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QLineEdit" name="password">
+   <widget class="QLineEdit" name="id">
     <property name="geometry">
      <rect>
       <x>150</x>
@@ -103,7 +103,7 @@
      <enum>QLineEdit::Normal</enum>
     </property>
    </widget>
-   <widget class="QLabel" name="email">
+   <widget class="QLabel" name="email_label">
     <property name="geometry">
      <rect>
       <x>100</x>
@@ -116,7 +116,7 @@
      <string>Email</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="username">
+   <widget class="QLineEdit" name="email">
     <property name="geometry">
      <rect>
       <x>150</x>
@@ -124,6 +124,29 @@
       <width>291</width>
       <height>31</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="db_label">
+    <property name="geometry">
+     <rect>
+      <x>150</x>
+      <y>250</y>
+      <width>231</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>--</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
    </widget>
   </widget>
