--- a/adminedit_apt.ui
+++ b/adminedit_apt.ui
@@ -180,7 +180,7 @@
   <widget class="QPushButton" name="submitbtn">
    <property name="geometry">
     <rect>
-     <x>430</x>
+     <x>330</x>
      <y>560</y>
      <width>151</width>
      <height>51</height>
@@ -214,6 +214,19 @@
    </property>
    <property name="text">
     <string>--</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="quit">
+   <property name="geometry">
+    <rect>
+     <x>510</x>
+     <y>560</y>
+     <width>151</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Quit</string>
    </property>
   </widget>
  </widget>
