--- a/adminedit_apt.ui
+++ b/adminedit_apt.ui
@@ -17,9 +17,9 @@
    <property name="geometry">
     <rect>
      <x>110</x>
-     <y>200</y>
-     <width>541</width>
-     <height>341</height>
+     <y>170</y>
+     <width>621</width>
+     <height>371</height>
     </rect>
    </property>
    <property name="title">
@@ -28,8 +28,8 @@
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>250</y>
+      <x>30</x>
+      <y>280</y>
       <width>101</width>
       <height>51</height>
      </rect>
@@ -41,8 +41,8 @@
    <widget class="QLineEdit" name="choice_2">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>100</y>
+      <x>140</x>
+      <y>130</y>
       <width>281</width>
       <height>51</height>
      </rect>
@@ -51,8 +51,8 @@
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>100</y>
+      <x>30</x>
+      <y>130</y>
       <width>101</width>
       <height>51</height>
      </rect>
@@ -64,8 +64,8 @@
    <widget class="QLineEdit" name="choice_1">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>30</y>
+      <x>140</x>
+      <y>60</y>
       <width>281</width>
       <height>51</height>
      </rect>
@@ -74,8 +74,8 @@
    <widget class="QLineEdit" name="choice_4">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>250</y>
+      <x>140</x>
+      <y>280</y>
       <width>281</width>
       <height>51</height>
      </rect>
@@ -84,8 +84,8 @@
    <widget class="QLineEdit" name="choice_3">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>170</y>
+      <x>140</x>
+      <y>200</y>
       <width>281</width>
       <height>51</height>
      </rect>
@@ -94,8 +94,8 @@
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>170</y>
+      <x>30</x>
+      <y>200</y>
       <width>101</width>
       <height>51</height>
      </rect>
@@ -107,8 +107,8 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>30</y>
+      <x>30</x>
+      <y>60</y>
       <width>101</width>
       <height>51</height>
      </rect>
@@ -117,13 +117,56 @@
      <string>Choice 1</string>
     </property>
    </widget>
+   <widget class="QGroupBox" name="crt_choice">
+    <property name="geometry">
+     <rect>
+      <x>440</x>
+      <y>70</y>
+      <width>151</width>
+      <height>161</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>Correct Choice</string>
+    </property>
+    <widget class="QComboBox" name="comboBox">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>40</y>
+       <width>131</width>
+       <height>22</height>
+      </rect>
+     </property>
+     <item>
+      <property name="text">
+       <string>Choice-1</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Choice-2</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Choice-3</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Choice-4</string>
+      </property>
+     </item>
+    </widget>
+   </widget>
   </widget>
   <widget class="QGroupBox" name="qn_box">
    <property name="geometry">
     <rect>
      <x>110</x>
-     <y>50</y>
-     <width>541</width>
+     <y>30</y>
+     <width>621</width>
      <height>131</height>
     </rect>
    </property>
@@ -147,9 +190,9 @@
     <property name="geometry">
      <rect>
       <x>120</x>
-      <y>30</y>
-      <width>371</width>
-      <height>71</height>
+      <y>50</y>
+      <width>481</width>
+      <height>51</height>
      </rect>
     </property>
    </widget>
@@ -180,8 +223,8 @@
   <widget class="QPushButton" name="submitbtn">
    <property name="geometry">
     <rect>
-     <x>330</x>
-     <y>560</y>
+     <x>420</x>
+     <y>570</y>
      <width>151</width>
      <height>51</height>
     </rect>
@@ -219,8 +262,8 @@
   <widget class="QPushButton" name="quit">
    <property name="geometry">
     <rect>
-     <x>510</x>
-     <y>560</y>
+     <x>600</x>
+     <y>570</y>
      <width>151</width>
      <height>51</height>
     </rect>
